--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- CityBlocks.com Intro | Version: R1.0812025.1-->
+<!-- CityBlocks.com Intro | Version: 2025-08-12_R1.0 -->
 <html lang="en">
 <head>
 <meta charset="utf-8" />
