--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
 <div id="inquire"><button type="button" onclick="openInvestor()">Investors Inquire</button></div>
 
 <script>
-  // One-word beat sequence (fast; “AT” is snappy)
-  const words = ['BUILD','YOUR','NEXT','WORLD','AT','CITYBLOCKS.COM'];
+  // One-word beat sequence (fast; “at” is snappy)
+  const words = ['BUILD','YOUR','NEXT','WORLD','at','CITYBLOCKS.COM'];
   const introWord = document.getElementById('introWord');
   const introLogo = document.getElementById('introLogo');
   let i = 0, t = 0;
