--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-ium<!DOCTYPE html>
-<!-- CityBlocks.com Intro | Version: 2025-08-12_R1.0 -->
+<!DOCTYPE html>
+<!-- CityBlocks.com Intro | Version: 2025-08-12_R1.1 -->
 <html lang="en">
 <head>
 <meta charset="utf-8" />
