--- a/index.html
+++ b/index.html
@@ -77,11 +77,20 @@
 
 <!-- QUADRANTS -->
 <main id="app" aria-hidden="true">
-  <figure class="tile"><img src="1940s.png" alt="1940s"><figcaption class="label">1940s</figcaption></figure>
-  <figure class="tile"><img src="PresentDay.png" alt="Present Day"><figcaption class="label">Present Day</figcaption></figure>
-  <figure class="tile"><img src="Future.png" alt="Future"><figcaption class="label">Future</figcaption></figure>
-  <figure class="tile"><img src="HistoricPast.png" alt="Historic Past"><figcaption class="label">Historic Past</figcaption></figure>
+  <a class="tile" href="worlds/1940s/">
+    <img src="1940s.png" alt="1940s"><span class="label">1940s</span>
+  </a>
+  <a class="tile" href="worlds/present/">
+    <img src="PresentDay.png" alt="Present Day"><span class="label">Present Day</span>
+  </a>
+  <a class="tile" href="worlds/future/">
+    <img src="Future.png" alt="Future"><span class="label">Future</span>
+  </a>
+  <a class="tile" href="worlds/historic/">
+    <img src="HistoricPast.png" alt="Historic Past"><span class="label">Historic Past</span>
+  </a>
 </main>
+
 
 <!-- CTA -->
 <div id="inquire"><button type="button" onclick="openInvestor()">Investors Inquire</button></div>
