--- a/index.html
+++ b/index.html
@@ -71,25 +71,37 @@
 <section id="intro" aria-hidden="false">
   <div class="intro-inner">
     <h1 id="introWord">BUILD</h1>
-    <img id="introLogo" src="CityBlocksLogo01.png" alt="CityBlocks Logo" />
+    <img id="introLogo" src="CityBlocksLogo01.png" alt="CityBlocks Logo">
   </div>
 </section>
 
 <!-- QUADRANTS -->
 <main id="app" aria-hidden="true">
   <a class="tile" href="worlds/1940s/">
-    <img src="1940s.png" alt="1940s"><span class="label">1940s</span>
+    <img src="1940s.png" alt="1940s">
+    <video class="hover-vid" src="1940s.mp4" muted loop playsinline preload="metadata"></video>
+    <span class="label">1940s</span>
   </a>
+
   <a class="tile" href="worlds/present/">
-    <img src="PresentDay.png" alt="Present Day"><span class="label">Present Day</span>
+    <img src="PresentDay.png" alt="Present Day">
+    <video class="hover-vid" src="PresentDay.mp4" muted loop playsinline preload="metadata"></video>
+    <span class="label">Present Day</span>
   </a>
+
   <a class="tile" href="worlds/future/">
-    <img src="Future.png" alt="Future"><span class="label">Future</span>
+    <img src="Future.png" alt="Future">
+    <video class="hover-vid" src="Future.mp4" muted loop playsinline preload="metadata"></video>
+    <span class="label">Future</span>
   </a>
+
   <a class="tile" href="worlds/historic/">
-    <img src="HistoricPast.png" alt="Historic Past"><span class="label">Historic Past</span>
+    <img src="HistoricPast.png" alt="Historic Past">
+    <video class="hover-vid" src="HistoricPast.mp4" muted loop playsinline preload="metadata"></video>
+    <span class="label">Historic Past</span>
   </a>
 </main>
+
 
 
 <!-- CTA -->
