--- a/index.html
+++ b/index.html
@@ -1,169 +1,47 @@
 <!DOCTYPE html>
-<!-- CityBlocks.com Intro | Version: 2025-08-12_R1.2 -->
+<!-- CityBlocks.com | Single-Page Launch - v2025-08-24 -->
 <html lang="en">
 <head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>CityBlocks.com</title>
-<link rel="preload" href="CityBlocksLogo01.png" as="image">
-<link rel="preload" href="1940s.png" as="image">
-<link rel="preload" href="PresentDay.png" as="image">
-<link rel="preload" href="Future.png" as="image">
-<link rel="preload" href="HistoricPast.png" as="image">
-<style>
-  :root{ --bg:#000; --fg:#fff; --cta:#ffcc00; }
-  *{ box-sizing:border-box }
-  html,body{ height:100%; margin:0 }
-  body{ background:var(--bg); color:var(--fg); font-family:"Helvetica Neue",Arial,sans-serif; overflow:hidden }
-
-  #intro{ position:fixed; inset:0; z-index:10; background:var(--bg); display:grid; place-items:center; min-height:100svh }
-  .intro-inner{ display:flex; flex-direction:column; align-items:center; gap:.6rem; text-align:center }
-  #introWord{
-    font-weight:900; letter-spacing:.06em; line-height:1.05; margin:0;
-    opacity:0; transform:scale(.85) translateY(8px);
-    transition:opacity .25s ease, transform .25s ease;
-    filter: drop-shadow(0 6px 20px rgba(0,0,0,.55));
-  }
-  @media (min-width:900px){ #introWord{ font-size: clamp(56px, 9vw, 136px) } }
-  @media (max-width:899px){ #introWord{ font-size: clamp(36px, 10vw, 64px) } }
-  #introWord.show{ opacity:1; transform:scale(1) translateY(0) }
-
-  #introLogo{
-    width:min(44vw,520px); max-width:92vw;
-    opacity:0; transform:scale(.9);
-    transition:opacity .45s ease, transform .45s ease;
-    filter: drop-shadow(0 8px 28px rgba(0,0,0,.6));
-  }
-  #introLogo.show{ opacity:1; transform:scale(1) }
-  .intro-fade-out{ animation:introFade .7s ease forwards }
-  @keyframes introFade{ to{ opacity:0; visibility:hidden } }
-
-  #app{
-    position:fixed; inset:0; z-index:1;
-    display:grid; grid-template-columns:1fr 1fr; grid-template-rows:1fr 1fr;
-    opacity:0; transition:opacity .8s ease;
-  }
-  .tile{ position:relative; overflow:hidden; outline:1px solid rgba(255,255,255,.06) }
-  .tile img{ width:100%; height:100%; object-fit:cover; display:block; transform:scale(1); transition:transform .4s ease }
-  .tile:hover img{ transform:scale(1.06) }
-  .label{
-    position:absolute; left:12px; bottom:12px; background:rgba(0,0,0,.55);
-    padding:.45rem .7rem; border-radius:8px; font-weight:800; font-size:clamp(12px,1.6vw,16px)
-  }
-  .tile:where(a){ display:block; height:100% } /* so <a> fills the tile */
-
-  #inquire{ position:fixed; right:18px; bottom:18px; z-index:2; opacity:0; transition:opacity .8s ease }
-  #inquire button{
-    background:var(--cta); color:#111; border:0; padding:.7rem 1rem; border-radius:10px;
-    font-weight:800; font-size:clamp(14px,1.6vw,16px); cursor:pointer; box-shadow:0 8px 24px rgba(0,0,0,.35)
-  }
-  #inquire button:hover{ filter:brightness(1.06) }
-
-  @media (max-width:700px){
-    #app{ grid-template-columns:1fr; grid-template-rows:repeat(4, 25vh) }
-  }
-</style>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>CityBlocks.com</title>
+  <meta name="description" content="CityBlocks.com — four animated worlds. Hover to play.">
+  <link rel="preload" href="CityBlocksLogo01.png" as="image">
+  <link rel="preload" href="1940s.png" as="image">
+  <link rel="preload" href="PresentDay.png" as="image">
+  <link rel="preload" href="Future.png" as="image">
+  <link rel="preload" href="HistoricPast.png" as="image">
+  <link rel="stylesheet" href="styles.css?v=20250824">
 </head>
-
 <body>
+  <header class="site-header">
+    <div class="brand">
+      <img src="CityBlocksLogo01.png" alt="CityBlocks logo" class="logo" />
+      <h1>CityBlocks.com</h1>
+    </div>
+    <nav class="top-nav">
+      <a href="investors.html" class="btn">Investors</a>
+    </nav>
+  </header>
 
-<!-- INTRO -->
-<section id="intro" aria-hidden="false">
-  <div class="intro-inner">
-    <h1 id="introWord">BUILD</h1>
-    <img id="introLogo" src="CityBlocksLogo01.png" alt="CityBlocks Logo">
-  </div>
-</section>
+  <main class="grid">
+    <!-- 1940s -->
+    <a class="tile" href="#" aria-label="Enter the 1940s world"
+       data-image="1940s.png" data-video="1940s.mp4">
+      <div class="media">
+        <img src="1940s.png" alt="1940s still" loading="eager">
+        <video muted playsinline preload="none">
+          <source src="1940s.mp4" type="video/mp4">
+        </video>
+        <div class="scrim"></div>
+      </div>
+      <span class="label">1940s</span>
+    </a>
 
-<!-- QUADRANTS -->
-<main id="app" aria-hidden="true">
-  <a class="tile" href="worlds/1940s/">
-    <img src="1940s.png" alt="1940s">
-    <video class="hover-vid" src="1940s.mp4" muted loop playsinline preload="metadata"></video>
-    <span class="label">1940s</span>
-  </a>
-
-  <a class="tile" href="worlds/present/">
-    <img src="PresentDay.png" alt="Present Day">
-    <video class="hover-vid" src="PresentDay.mp4" muted loop playsinline preload="metadata"></video>
-    <span class="label">Present Day</span>
-  </a>
-
-  <a class="tile" href="worlds/future/">
-    <img src="Future.png" alt="Future">
-    <video class="hover-vid" src="Future.mp4" muted loop playsinline preload="metadata"></video>
-    <span class="label">Future</span>
-  </a>
-
-  <a class="tile" href="worlds/historic/">
-    <img src="HistoricPast.png" alt="Historic Past">
-    <video class="hover-vid" src="HistoricPast.mp4" muted loop playsinline preload="metadata"></video>
-    <span class="label">Historic Past</span>
-  </a>
-</main>
-
-
-
-<!-- CTA -->
-<div id="inquire"><button type="button" onclick="openInvestor()">Investors Inquire</button></div>
-
-<script>
-  // One-word beat sequence
-  const words = ['BUILD','YOUR','NEXT','WORLD','at','CITYBLOCKS.COM'];
-  const introWord = document.getElementById('introWord');
-  const introLogo = document.getElementById('introLogo');
-  const intro = document.getElementById('intro');
-  const app = document.getElementById('app');
-  const inquire = document.getElementById('inquire');
-
-  let i = 0;
-
-  function showNext(){
-    const w = words[i];
-    // fade the current text out
-    introWord.classList.remove('show');
-
-    setTimeout(()=> {
-      // If final step: hide text, show logo (logo replaces the words)
-      if (w === 'CITYBLOCKS.COM') {
-        introWord.textContent = '';          // remove the text
-        introLogo.classList.add('show');     // show logo
-      } else {
-        introWord.textContent = w.toUpperCase();
-        introLogo.classList.remove('show');  // ensure logo hidden until final
-        introWord.classList.add('show');
-      }
-    }, 60);
-
-    // Quick beat specifically for the word "at" (case-insensitive)
-    const beat = (w.toLowerCase() === 'at') ? 220 : 420;
-
-    i++;
-    if (i < words.length) {
-      setTimeout(showNext, beat);
-    } else {
-      // Fade intro → reveal app + CTA
-      setTimeout(() => {
-        intro.classList.add('intro-fade-out');
-        intro.setAttribute('aria-hidden','true');
-        app.style.opacity = 1;
-        app.setAttribute('aria-hidden','false');
-        inquire.style.opacity = 1;
-      }, 800);
-    }
-  }
-
-  // Kick off sequence after a tiny settle
-  setTimeout(() => {
-    introWord.classList.add('show');
-    setTimeout(showNext, 420);
-  }, 150);
-
-  // Inquire goes to a web page (we'll add a stub so it doesn't 404)
-  function openInvestor(){ window.location.href = 'investors.html'; }
-  window.openInvestor = openInvestor;
-</script>
-
-
-</body>
-</html>
+    <!-- Present Day -->
+    <a class="tile" href="#" aria-label="Enter the Present Day world"
+       data-image="PresentDay.png" data-video="PresentDay.mp4">
+      <div class="media">
+        <img src="PresentDay.png" alt="Present Day still" loading="lazy">
+        <video muted playsinline preload="none">
+          <source src="PresentDay.mp4" type="vide
