--- a/investors.html
+++ b/investors.html
@@ -39,7 +39,7 @@
       <h1>Investors</h1>
     </div>
     <nav class="top-nav">
-      <a href="home.html" class="btn">Back to Home</a>
+      <a href="index.html" class="btn">Back to Home</a>
     </nav>
   </header>
 
