--- a/worlds/1940s.html
+++ b/worlds/1940s.html
@@ -1,1 +1,37 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>1940s — CityBlocks.com</title>
+  <link rel="stylesheet" href="../styles.css?v=20250825">
+  <style>
+    body, html { margin:0; padding:0; height:100%; width:100%; background:#000; }
+    video, img {
+      position:fixed; top:0; left:0; width:100%; height:100%; object-fit:cover;
+    }
+    .overlay {
+      position:fixed; top:0; left:0; width:100%; display:flex;
+      justify-content:space-between; align-items:center;
+      padding:16px 20px; background:rgba(0,0,0,0.35);
+      z-index:10;
+    }
+  </style>
+</head>
+<body>
+  <div class="overlay">
+    <div class="brand">
+      <img src="../CityBlocksLogo01.png" alt="CityBlocks logo" class="logo" />
+      <h1>1940s</h1>
+    </div>
+    <nav><a href="../home.html" class="btn">Back to Home</a></nav>
+  </div>
+
+  <!-- Try to play video; fall back to image -->
+  <video autoplay muted loop playsinline poster="../1940s.png">
+    <source src="../1940s_world.mp4" type="video/mp4">
+  </video>
+  <img src="../1940s.png" alt="1940s still" />
+</body>
+</html>
 
