--- a/worlds/1940s.html
+++ b/worlds/1940s.html
@@ -24,7 +24,7 @@
       <img src="../CityBlocksLogo01.png" alt="CityBlocks logo" class="logo" />
       <h1>1940s</h1>
     </div>
-    <nav><a href="../home.html" class="btn">Back to Home</a></nav>
+    <nav><a href="../idex.html" class="btn">Back to Home</a></nav>
   </div>
 
   <!-- Try to play video; fall back to image -->
