--- a/worlds/1940s.html
+++ b/worlds/1940s.html
@@ -11,10 +11,25 @@
       position:fixed; top:0; left:0; width:100%; height:100%; object-fit:cover;
     }
     .overlay {
-      position:fixed; top:0; left:0; width:100%; display:flex;
-      justify-content:space-between; align-items:center;
-      padding:16px 20px; background:rgba(0,0,0,0.35);
+      position:fixed; top:0; left:0; width:100%;
+      display:flex; justify-content:space-between; align-items:center;
+      padding:16px 20px;
+      background:rgba(0,0,0,0.35);
       z-index:10;
+    }
+    .overlay a {
+      color:#fff !important;
+      text-decoration:none !important;
+      padding:8px 14px;
+      border-radius:12px;
+      border:1px solid rgba(255,255,255,0.3);
+      background:rgba(0,0,0,0.25);
+      transition:background .2s ease, color .2s ease, border-color .2s ease;
+    }
+    .overlay a:hover {
+      color:gold !important;
+      background:rgba(255,255,255,0.1);
+      border-color:rgba(255,255,255,0.5);
     }
   </style>
 </head>
@@ -24,14 +39,13 @@
       <img src="../CityBlocksLogo01.png" alt="CityBlocks logo" class="logo" />
       <h1>1940s</h1>
     </div>
-    <nav><a href="../index.html" class="btn">Back to Home</a></nav>
+    <nav><a href="../index.html">Back to Home</a></nav>
   </div>
 
-  <!-- Try to play video; fall back to image -->
+  <!-- Video with PNG fallback -->
   <video autoplay muted loop playsinline poster="../1940s.png">
     <source src="../1940s_world.mp4" type="video/mp4">
   </video>
   <img src="../1940s.png" alt="1940s still" />
 </body>
 </html>
-
