--- a/worlds/present-day.html
+++ b/worlds/present-day.html
@@ -1,1 +1,17 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Present Day — CityBlocks.com</title>
+  <link rel="stylesheet" href="../styles.css?v=20250825">
+  <style>
+    body, html { margin:0; padding:0; height:100%; width:100%; background:#000; }
+    video, img {
+      position:fixed; top:0; left:0; width:100%; height:100%; object-fit:cover;
+    }
+    .overlay {
+      position:fixed; top:0; left:0; width:100%;
+      display:flex; justify-content:space-between; align-items:center;
+      padding:16px 20
 
