--- a/worlds/future.html
+++ b/worlds/future.html
@@ -1,1 +1,52 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Future — CityBlocks.com</title>
+  <link rel="stylesheet" href="../styles.css?v=20250825">
+  <style>
+    body, html { margin:0; padding:0; height:100%; width:100%; background:#000; }
+    video, img {
+      position:fixed; top:0; left:0; width:100%; height:100%; object-fit:cover;
+    }
+    .overlay {
+      position:fixed; top:0; left:0; width:100%;
+      display:flex; justify-content:space-between; align-items:center;
+      padding:16px 20px;
+      background:rgba(0,0,0,0.35);
+      z-index:10;
+    }
+    .overlay a {
+      color:#fff !important;
+      text-decoration:none !important;
+      padding:8px 14px;
+      border-radius:12px;
+      border:1px solid rgba(255,255,255,0.3);
+      background:rgba(0,0,0,0.25);
+      transition:background .2s ease, color .2s ease, border-color .2s ease;
+    }
+    .overlay a:hover {
+      color:gold !important;
+      background:rgba(255,255,255,0.1);
+      border-color:rgba(255,255,255,0.5);
+    }
+  </style>
+</head>
+<body>
+  <div class="overlay">
+    <div class="brand">
+      <img src="../CityBlocksLogo01.png" alt="CityBlocks logo" class="logo" />
+      <h1>Future</h1>
+    </div>
+    <nav><a href="../index.html">Back to Home</a></nav>
+  </div>
+
+  <!-- Video with PNG fallback -->
+  <video autoplay muted loop playsinline poster="../Future.png">
+    <source src="../future_world.mp4" type="video/mp4">
+  </video>
+  <img src="../Future.png" alt="Future still" />
+</body>
+</html>
 
