--- a/worlds/present-day.html
+++ b/worlds/present-day.html
@@ -13,5 +13,39 @@
     .overlay {
       position:fixed; top:0; left:0; width:100%;
       display:flex; justify-content:space-between; align-items:center;
-      padding:16px 20
+      padding:16px 20px;
+      background:rgba(0,0,0,0.35);
+      z-index:10;
+    }
+    .overlay a {
+      color:#fff !important;
+      text-decoration:none !important;
+      padding:8px 14px;
+      border-radius:12px;
+      border:1px solid rgba(255,255,255,0.3);
+      background:rgba(0,0,0,0.25);
+      transition:background .2s ease, color .2s ease, border-color .2s ease;
+    }
+    .overlay a:hover {
+      color:gold !important;
+      background:rgba(255,255,255,0.1);
+      border-color:rgba(255,255,255,0.5);
+    }
+  </style>
+</head>
+<body>
+  <div class="overlay">
+    <div class="brand">
+      <img src="../CityBlocksLogo01.png" alt="CityBlocks logo" class="logo" />
+      <h1>Present Day</h1>
+    </div>
+    <nav><a href="../index.html">Back to Home</a></nav>
+  </div>
 
+  <!-- Video with PNG fallback -->
+  <video autoplay muted loop playsinline poster="../PresentDay.png">
+    <source src="../present_world.mp4" type="video/mp4">
+  </video>
+  <img src="../PresentDay.png" alt="Present Day still" />
+</body>
+</html>
