--- a/worlds/1940s.html
+++ b/worlds/1940s.html
@@ -44,7 +44,7 @@
 
   <!-- Video with PNG fallback -->
   <video autoplay muted loop playsinline poster="../1940s.png">
-    <source src="../1940s_world.mp4" type="video/mp4">
+    <source src="../videos/1940s_world.mp4" type="video/mp4">
   </video>
   <img src="../1940s.png" alt="1940s still" />
 </body>
