--- a/worlds/present-day.html
+++ b/worlds/present-day.html
@@ -42,10 +42,9 @@
     <nav><a href="../index.html">Back to Home</a></nav>
   </div>
 
-  <!-- Video with PNG fallback -->
   <video autoplay muted loop playsinline poster="../PresentDay.png">
-    <source src="../present_world.mp4" type="video/mp4">
-  </video>
-  <img src="../PresentDay.png" alt="Present Day still" />
+  <source src="../videos/present_world.mp4?v=1" type="video/mp4">
+</video>
+
 </body>
 </html>
