--- a/worlds/historic-past.html
+++ b/worlds/historic-past.html
@@ -42,10 +42,8 @@
     <nav><a href="../index.html">Back to Home</a></nav>
   </div>
 
-  <!-- Video with PNG fallback -->
   <video autoplay muted loop playsinline poster="../HistoricPast.png">
-    <source src="../historic_world.mp4" type="video/mp4">
-  </video>
-  <img src="../HistoricPast.png" alt="Historic Past still" />
+  <source src="../videos/historic_world.mp4?v=1" type="video/mp4">
+</video>
 </body>
 </html>
