--- a/worlds/future.html
+++ b/worlds/future.html
@@ -42,11 +42,9 @@
     <nav><a href="../index.html">Back to Home</a></nav>
   </div>
 
-  <!-- Video with PNG fallback -->
   <video autoplay muted loop playsinline poster="../Future.png">
-    <source src="../future_world.mp4" type="video/mp4">
-  </video>
-  <img src="../Future.png" alt="Future still" />
+  <source src="../videos/future_world.mp4?v=1" type="video/mp4">
+</video>
 </body>
 </html>
 
