--- a/worlds/1940s.html
+++ b/worlds/1940s.html
@@ -42,10 +42,8 @@
     <nav><a href="../index.html">Back to Home</a></nav>
   </div>
 
-  <!-- Video with PNG fallback -->
-  <video autoplay muted loop playsinline poster="../1940s.png">
-    <source src="../videos/1940s_world.mp4" type="video/mp4">
-  </video>
-  <img src="../1940s.png" alt="1940s still" />
+    <video autoplay muted loop playsinline poster="../1940s.png">
+  <source src="../videos/1940s_world.mp4?v=1" type="video/mp4">
+</video>
 </body>
 </html>
