--- a/worlds/1940s.html
+++ b/worlds/1940s.html
@@ -3,47 +3,25 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>1940s — CityBlocks.com</title>
-  <link rel="stylesheet" href="../styles.css?v=20250825">
+  <title>CityBlocks 1940 — CityBlocks.com</title>
+  <link rel="stylesheet" href="../styles.css?v=20250825" />
   <style>
-    body, html { margin:0; padding:0; height:100%; width:100%; background:#000; }
-    video, img {
-      position:fixed; top:0; left:0; width:100%; height:100%; object-fit:cover;
-    }
-    .overlay {
-      position:fixed; top:0; left:0; width:100%;
-      display:flex; justify-content:space-between; align-items:center;
-      padding:16px 20px;
-      background:rgba(0,0,0,0.35);
-      z-index:10;
-    }
-    .overlay a {
-      color:#fff !important;
-      text-decoration:none !important;
-      padding:8px 14px;
-      border-radius:12px;
-      border:1px solid rgba(255,255,255,0.3);
-      background:rgba(0,0,0,0.25);
-      transition:background .2s ease, color .2s ease, border-color .2s ease;
-    }
-    .overlay a:hover {
-      color:gold !important;
-      background:rgba(255,255,255,0.1);
-      border-color:rgba(255,255,255,0.5);
-    }
+    html,body{margin:0;height:100%;background:#000}
+    video{position:fixed;top:0;left:0;width:100%;height:100%;object-fit:cover}
+    .overlay{position:fixed;top:0;left:0;width:100%;display:flex;justify-content:space-between;align-items:center;padding:16px 20px;background:rgba(0,0,0,.35);z-index:10}
+    .brand h1{margin:0;font-size:20px;font-weight:700;color:#fff}
+    .overlay a{color:#fff!important;text-decoration:none!important;padding:8px 14px;border-radius:12px;border:1px solid rgba(255,255,255,.3);background:rgba(0,0,0,.25);transition:background .2s,color .2s,border-color .2s}
+    .overlay a:hover{color:gold!important;background:rgba(255,255,255,.1);border-color:rgba(255,255,255,.5)}
   </style>
 </head>
 <body>
   <div class="overlay">
-    <div class="brand">
-      <img src="../CityBlocksLogo01.png" alt="CityBlocks logo" class="logo" />
-      <h1>1940s</h1>
-    </div>
+    <div class="brand"><h1>CityBlocks 1940</h1></div>
     <nav><a href="../index.html">Back to Home</a></nav>
   </div>
 
-    <video autoplay muted loop playsinline poster="../1940s.png">
-  <source src="../videos/1940s_world.mp4?v=1" type="video/mp4">
-</video>
+  <video autoplay muted loop playsinline poster="../1940s.png">
+    <source src="../videos/1940s_world.mp4?v=1" type="video/mp4" />
+  </video>
 </body>
 </html>
