--- a/worlds/1940s.html
+++ b/worlds/1940s.html
@@ -20,8 +20,9 @@
     <nav><a href="../index.html">Back to Home</a></nav>
   </div>
 
-  <video autoplay muted loop playsinline poster="../1940s.png">
-    <source src="../videos/1940s_world.mp4?v=1" type="video/mp4" />
-  </video>
+  <video autoplay muted loop playsinline poster="../1940s.png" style="width:100%; height:auto; display:block;">
+  <source src="../videos/1940s_world.mp4?v=1" type="video/mp4" />
+</video>
+
 </body>
 </html>
