--- a/worlds/1940s.html
+++ b/worlds/1940s.html
@@ -20,11 +20,12 @@
     <nav><a href="../index.html">Back to Home</a></nav>
   </div>
 
-  <video autoplay muted loop playsinline 
-       poster="../1940s.png" 
-       style="width:100%; height:100%; object-fit:cover;">
+ <video autoplay muted loop playsinline 
+       poster="../1940s.png"
+       style="position:fixed; top:0; left:0; width:100%; height:100%; object-fit:cover; z-index:-1;">
   <source src="../videos/1940s_world.mp4" type="video/mp4">
 </video>
+
 
 </body>
 </html>
