--- a/worlds/1940s.html
+++ b/worlds/1940s.html
@@ -4,53 +4,13 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>CityBlocks 1940 — CityBlocks.com</title>
-  <link rel="stylesheet" href="../styles.css?v=20250825" />
   <style>
-    html, body {
-      margin: 0;
-      height: 100%;
-      background: #000;
-    }
-    .overlay {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 16px;
-      z-index: 1;
-    }
-    .brand h1 {
-      margin: 0;
-      font-size: 22px;
-      font-weight: 700;
-      color: #fff;
-    }
-    nav a {
-      color: #fff !important;
-      text-decoration: none !important;
-      padding: 8px 14px;
-      border-radius: 12px;
-      border: 1px solid rgba(255,255,255,.5);
-      background: rgba(0,0,0,.4);
-    }
-    nav a:hover {
-      background: gold !important;
-      color: #000 !important;
-    }
-    video {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      object-position: center;
-      z-index: -1;
-      background: #000;
-    }
+    html, body {margin:0; height:100%; background:#000;}
+    .overlay {position:fixed; top:0; left:0; width:100%; display:flex; justify-content:space-between; align-items:center; padding:16px; z-index:1;}
+    .brand h1 {margin:0; font-size:22px; font-weight:700; color:#fff;}
+    nav a {color:#fff; text-decoration:none; padding:8px 14px; border-radius:12px; border:1px solid rgba(255,255,255,.5); background:rgba(0,0,0,.4);}
+    nav a:hover {background:gold; color:#000;}
+    video {position:fixed; top:0; left:0; width:100%; height:100%; object-fit:cover; object-position:center; z-index:-1;}
   </style>
 </head>
 <body>
@@ -59,10 +19,8 @@
     <nav><a href="../index.html">Back to Home</a></nav>
   </div>
 
- <video autoplay muted loop playsinline poster="../1940s.png">
-  <source src="../videos/1940s.mp4" type="video/mp4" />
-  <source src="../1940s.mp4" type="video/mp4" />
-</video>
-
+  <video autoplay muted loop playsinline poster="../1940s.png">
+    <source src="../videos/1940s.mp4" type="video/mp4" />
+  </video>
 </body>
 </html>
